# kuka_ws

./: .gitmodules  Environment_Setting  Launch_Command
install/: local_setup.sh  setup.sh
install/kuka_control_box/include/kuka_control_box/: Robotics.h
install/kuka_control_box/lib/kuka_control_box/: kuka_ik_node  trajectory_publisher
install/kuka_control_box/share/ament_index/resource_index/package_run_dependencies/: kuka_control_box
install/kuka_control_box/share/ament_index/resource_index/parent_prefix_path/: kuka_control_box
install/kuka_control_box/share/kuka_control_box/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_control_box/share/kuka_control_box/cmake/: ament_cmake_export_dependencies-extras.cmake  kuka_control_boxConfig-version.cmake  kuka_control_boxConfig.cmake
install/kuka_control_box/share/kuka_control_box/environment/: ament_prefix_path.dsv  path.dsv
install/kuka_controller/share/ament_index/resource_index/package_run_dependencies/: kuka_controller
install/kuka_controller/share/ament_index/resource_index/parent_prefix_path/: kuka_controller
install/kuka_controller/share/kuka_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_controller/share/kuka_controller/cmake/: kuka_controllerConfig-version.cmake  kuka_controllerConfig.cmake
install/kuka_controller/share/kuka_controller/config/: kuka_controllers.yaml
install/kuka_controller/share/kuka_controller/environment/: ament_prefix_path.dsv  path.dsv
install/kuka_controller/share/kuka_controller/launch/: controller.launch.py
install/kuka_cpp_examples/lib/kuka_cpp_examples/: simple_publisher  simple_subscriber
install/kuka_cpp_examples/share/ament_index/resource_index/parent_prefix_path/: kuka_cpp_examples
install/kuka_cpp_examples/share/kuka_cpp_examples/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kuka_description/share/ament_index/resource_index/package_run_dependencies/: kuka_description
install/kuka_description/share/ament_index/resource_index/parent_prefix_path/: kuka_description
install/kuka_description/share/kuka_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_description/share/kuka_description/cmake/: kuka_descriptionConfig-version.cmake  kuka_descriptionConfig.cmake
install/kuka_description/share/kuka_description/environment/: ament_prefix_path.dsv  path.dsv
install/kuka_description/share/kuka_description/launch/: display.launch.py  gazebo.launch.py
install/kuka_description/share/kuka_description/meshes/: link0_exp.stl  link1_exp.stl  link2_exp.stl  link3_exp.stl  link4_exp.stl  link5_exp.stl  link6_exp.stl
install/kuka_description/share/kuka_description/models/ground_plane/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
install/kuka_description/share/kuka_description/models/sun/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
install/kuka_description/share/kuka_description/rviz/: display.rviz
install/kuka_description/share/kuka_description/urdf/: arduinobot.urdf.xacro  kuka.urdf.xacro  kuka_gazebo.xacro  kuka_ros2_control.xacro
install/kuka_py_examples/lib/kuka_py_examples/: simple_publisher  simple_subscriber
install/kuka_py_examples/share/kuka_py_examples/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/kuka_apriltag/: package.xml  setup.cfg  setup.py
src/kuka_apriltag/launch/: spawn_env.launch.py
src/kuka_apriltag/urdf/: taskspace.urdf
src/kuka_control_box/: CMakeLists.txt  package.xml
src/kuka_control_box/include/kuka_control_box/: Robotics.h
src/kuka_control_box/src/: Robotics.cpp  kuka_ik_node.cpp  kuka_ik_service_server.cpp  trajectory_publisher.cpp
src/kuka_control_box/src/backup/: Robotics copy 2.cpp  kuka_ik_joint_pub.cpp  kuka_ik_node.cpp  kuka_ik_service_server copy 2.cpp  kuka_ik_service_server copy.cpp  trajectory_publisher.cpp
src/kuka_control_box_srvs/: CMakeLists.txt  package.xml
src/kuka_control_box_srvs/srv/: KukaJoint.srv  KukaTask.srv  KukaTaskInput.srv  KukaTransformInput.srv
src/kuka_controller/: CMakeLists.txt  package.xml
src/kuka_controller/config/: kuka_controllers.yaml
src/kuka_controller/launch/: controller.launch copy.py  controller.launch.py  initialize.launch.py  kuka_bringup.launch.py
src/kuka_cpp_examples/: CMakeLists.txt  package.xml
src/kuka_description/: CMakeLists.txt
src/kuka_description/launch/: display.launch.py  gazebo.launch.py  gazebo_rviz.launch.py  kuka_bringup.launch.py
src/kuka_description/meshes/: link0_exp.stl  link5_exp.stl
src/kuka_description/rviz/: display.rviz
src/kuka_description/urdf/: depth_camera.xacro  kuka.urdf copy.xacro  kuka.urdf.xacro  kuka_gazebo.xacro  kuka_ros2_control.xacro  realsense_camera.xacro
src/kuka_description/worlds/: kuka_env.world
src/kuka_eki/: package.xml  setup.cfg  setup.py
src/kuka_eki/kuka_eki/: eki.py  joint_state_publisher.py  kuka_eki_joint_server.py  kuka_eki_task_server.py  motion_client_joint.py  motion_client_task.py
src/kuka_eki/launch/: kuka_bringup.launch.py  kuka_eki_interface_bringup.launch.py  kuka_eki_joint_initial.launch.py
src/kuka_py_examples/: setup.cfg  setup.py
src/kuka_task_client/: package.xml  setup.cfg  setup.py
src/kuka_task_client/kuka_task_client/: kuka_client_joint_update.py  task_client.py  visual_command_client.py
src/kuka_task_client/launch/: kuka_client_joint_update.launch.py
