<?xml version="1.0"?>
<package format="3">
  <name>kuka_control_box_srvs</name>
  <version>0.0.0</version>
  <description>Custom service messages for Kuka control box.</description>
  <maintainer email="example@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend> <!-- TF2 의존성 추가 -->
  <build_depend>tf2_ros</build_depend> <!-- TF2 ROS 의존성 추가 -->
  <build_depend>tf2_geometry_msgs</build_depend> <!-- tf2_geometry_msgs 의존성 추가 -->

  <!-- 실행 의존성 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend> <!-- TF2 실행 의존성 추가 -->
  <exec_depend>tf2_ros</exec_depend> <!-- TF2 ROS 실행 의존성 추가 -->
  <exec_depend>tf2_geometry_msgs</exec_depend> <!-- tf2_geometry_msgs 실행 의존성 추가 -->

  <!-- Member of rosidl_interface_packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
