[metadata]
name = kuka_task_client
version = 0.0.0
description = Python client for Kuka transform input service
author = Your Name
author_email = example@domain.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    numpy
    scipy
    sensor_msgs  # 추가된 종속성
    std_msgs     # 추가된 종속성

[options.entry_points]
console_scripts =
    task_client = kuka_task_client.task_client:main
    visual_command_client = kuka_task_client.visual_command_client:main
    kuka_client_joint_update = kuka_task_client.kuka_client_joint_update:main  # 새로운 노드 추가

[develop]
script_dir=$base/lib/kuka_task_client

[install]
install_scripts=$base/lib/kuka_task_client
